<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todolist">

    <ImageView
        android:id="@+id/textbg"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg"
        android:layout_alignParentTop="true" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COVID VIEWER"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/textbg"
        android:layout_width="match_parent"
        android:rotation="180"
        android:layout_height="55dp"
        android:background="@drawable/bg"
        android:layout_alignParentBottom="true" />

    <ImageView
        android:id="@+id/livesicon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/live"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="7dp"/>

    <ImageView
        android:id="@+id/mapsicon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/worldwide1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="190dp"
        android:layout_marginBottom="7dp"/>

    <ImageView
        android:id="@+id/todosicon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/clipboard"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="330dp"
        android:layout_marginBottom="7dp"/>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleconvid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COVID-19 VIRUS"
                android:drawableLeft="@drawable/bacteria"
                android:drawablePadding="3dp"
                android:textColor="#000000"
                android:textSize="30dp"
                android:paddingLeft="70dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About COVID-19"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/about_virus" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <ImageView
                android:id="@+id/worldmap"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/worldmap"
                android:scaleType="fitXY"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="How it Spreads?"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/spread" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:showFullScreenButton="true"
                android:id="@+id/youtubevideo1"
                app:autoPlay="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Symptoms!!"
                android:drawableLeft="@drawable/alert"
                android:drawablePadding="3dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/symptoms" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:showFullScreenButton="true"
                android:id="@+id/youtubevideo2"
                app:autoPlay="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prevention"
                android:drawableLeft="@drawable/alert"
                android:drawablePadding="3dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/shree" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Treatments"
                android:drawableLeft="@drawable/tick"
                android:drawablePadding="3dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/treament" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>


            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:showFullScreenButton="true"
                android:id="@+id/youtubevideo3"
                app:autoPlay="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="News Updates"
                android:drawableLeft="@drawable/world"
                android:drawablePadding="3dp"
                android:textColor="#000000"
                android:textSize="30dp"
                android:paddingLeft="80dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:showFullScreenButton="true"
                android:id="@+id/youtubevideo4"
                app:autoPlay="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:showFullScreenButton="true"
                android:id="@+id/youtubevideo5"
                app:autoPlay="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:showFullScreenButton="true"
                android:id="@+id/youtubevideo6"
                app:autoPlay="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:showFullScreenButton="true"
                android:id="@+id/youtubevideo7"
                app:autoPlay="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:showFullScreenButton="true"
                android:id="@+id/youtubevideo8"
                app:autoPlay="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>


        </LinearLayout>

    </ScrollView>



</RelativeLayout>